--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/packages.config
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="4.6.0" targetFramework="net452" />
+  <package id="bootstrap-fileinput" version="5.2.1" targetFramework="net452" />
   <package id="Dapper" version="1.60.6" targetFramework="net452" />
   <package id="jQuery" version="3.5.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net452" />
