--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -158,6 +159,7 @@
     <Compile Include="Interfaces\IProdutoRepositorio.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Imagem.cs" />
+    <Compile Include="Models\ImagemProduto.cs" />
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Resposta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
