--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -407,6 +407,7 @@
     <Content Include="Views\Produto\Cadastrar.cshtml" />
     <Content Include="Views\Categoria\_Listar.cshtml" />
     <Content Include="Views\Produto\_Listar.cshtml" />
+    <Content Include="Views\Produto\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
