--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -166,6 +166,8 @@
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Resposta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-fileinput\css\fileinput-rtl.css" />
@@ -419,6 +421,8 @@
     <Content Include="Views\Banner\_Listar.cshtml" />
     <Content Include="Views\Banner\Cadastrar.cshtml" />
     <Content Include="Views\Banner\Editar.cshtml" />
+    <Content Include="Views\Home\_Banner.cshtml" />
+    <Content Include="Views\Home\_Destaque.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
