--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Models\ImagemProduto.cs" />
     <Compile Include="Models\Produto.cs" />
     <Compile Include="Models\Resposta.cs" />
+    <Compile Include="Models\RespostaMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
@@ -201,6 +202,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\DataTable.css" />
+    <Content Include="Content\Imagens\Footer.png" />
     <Content Include="Content\Imagens\Home\3_BANNER.png" />
     <Content Include="Content\Imagens\Home\4_BANNER.png" />
     <Content Include="Content\Imagens\Home\5_BANNER.png" />
