--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Areas\Administracao\Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -432,6 +433,7 @@
     <Content Include="Views\Home\_Banner.cshtml" />
     <Content Include="Views\Home\_Destaque.cshtml" />
     <Content Include="Views\Categoria\detalhes.cshtml" />
+    <Content Include="Views\Produto\detalhes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
