--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Web.config
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Web.config
@@ -8,6 +8,7 @@
   </appSettings>
   <connectionStrings>
     <add name="bancoLocal" connectionString="Server=localhost;User Id=arforminhasapp;Database=ardesingforminhas;Pwd=ArForminh@s1;includesecurityasserts=true;" providerName="MySql.Data.MySqlClient" />
+    <add name="IdentityConnection" connectionString="Server=localhost;User Id=arforminhasapp;Database=ardesingforminhasidentity;Pwd=ArForminh@s1;includesecurityasserts=true;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -42,6 +43,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.8.8.0" newVersion="6.8.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
