--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/packages.config
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="AspNet.Identity.MySQL" version="1.0.0.38741" targetFramework="net452" />
   <package id="bootstrap" version="4.6.0" targetFramework="net452" />
   <package id="bootstrap-fileinput" version="5.2.1" targetFramework="net452" />
   <package id="Dapper" version="1.60.6" targetFramework="net452" />
   <package id="jQuery" version="3.5.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.19.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
@@ -16,10 +19,17 @@
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Google" version="4.2.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="MySql.Data" version="6.8.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="popper.js" version="1.16.1" targetFramework="net452" />
   <package id="SweetAlert.Bootstrap" version="1.0.1" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
