--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/ArDesignForminhas_Web.csproj
@@ -320,6 +320,7 @@
     <Content Include="Areas\Administracao\Views\Account\SendCode.cshtml" />
     <Content Include="Areas\Administracao\Views\Account\VerifyCode.cshtml" />
     <Content Include="Areas\Administracao\Views\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Areas\Administracao\Views\Shared\_LoginPartial.cshtml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -465,7 +466,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
