--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Web.config
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Web.config
@@ -11,9 +11,15 @@
     <add name="IdentityConnection" connectionString="Server=localhost;User Id=arforminhasapp;Database=ardesingforminhasidentity;Pwd=ArForminh@s1;includesecurityasserts=true;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.webServer>
+    <modules>
+      <remove name="FormsAuthentication" />
+    </modules>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
